V 0.6.5
Fix : Scan only opened folders, increases performances
Fix: Bug fix

V 0.6.0
Add : Show shared content in root directory
Add : Breadcrumb transition
Fix: Bug fix

V 0.5.2
Fix : Decode files URI to make it texteditor friendly

V 0.5.1
Fix : Bug fix

V 0.5.0
Add : Full AJAX navigation
Fix : Performances optimization

V 0.4.2
Fix : Performances optimization
Fix : Cache was making opened folders forgotten
Fix : CSS fix

V 0.4.1
Fix : Only refresh cache on folder action

V 0.4.0
Add : Performances optimization with cache
Add : Refresh cache button
Add : French translation

V 0.3.0
Add : OC5 friendly
Fix : Performances optimization

V 0.2.2
Fix : Closed icon folder for ownCloud, when not running in the host root

V 0.2.1
Add : Different icon for open or closed folders
Fix : Icon folder for ownCloud not running in the root of the virtual host

V 0.2.0
Add : Enhanced GUI

V 0.1.1
Add : Different colours for expanded or collpased toggle buttons
Fix : Empty folder superposition bug

V 0.1.0
creating the app